5/packages/angular_test/src/errors/will_never_stabilize.module
{"p":["angular_test","lib/src/errors/will_never_stabilize.dart"],"s":[["angular_test","lib/src/errors/will_never_stabilize.dart"]],"d":[]}